c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_member_no_type.c
union u {
    a;  // each union member declaration must specify a type
};